Bug 92467 - Calc crashes in find and replace dialog when arrow down is used
Summary: Calc crashes in find and replace dialog when arrow down is used
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0 target:4.4.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-06-30 23:46 UTC by Gerry
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerry 2015-06-30 23:46:43 UTC
Calc crashes when performing a simple search and replace action: 

* Create a new sheet in Calc
* click in any cell
* choose Edit -> Search&Replace
* type anything in the "Search for" field and hit the "arrow down" ↓ key on the keyboard.
-> LibreOffice freezes and after a few seconds crashes.

Reprocible: Always

LibreOffice version:
Version: 4.4.2.2
Build-ID: 40m0(Build:2)
Gebietsschema: de_DE

System: Ubuntu 15.04 with Gnome 3.16j
Comment 1 Timur 2015-07-01 14:30:59 UTC
Reproducible with 5.0 and 5.1+. Looks like regression that started in 4.3.
Comment 2 Commit Notification 2015-07-02 15:24:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c51d5706205cd0282c07d778ffac5f265c3eaf5f

Resolves: tdf#92467 crashes with empty history list on pressing down

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-07-02 15:29:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8ddd3b0280baa1b770f439fbbca9ff073faa16b&h=libreoffice-5-0

Resolves: tdf#92467 crashes with empty history list on pressing down

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Timur 2015-07-02 15:32:09 UTC
That was a so called lightning bug fix...
Comment 5 Gerry 2015-07-03 07:09:23 UTC
Thank you very much for the fix!
Comment 6 Commit Notification 2015-07-06 08:49:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d10947eb35a1bdd9475e1e02739075c4a4ab644&h=libreoffice-4-4

Resolves: tdf#92467 crashes with empty history list on pressing down

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.