Resolves: tdf#92467 crashes with empty history list on pressing down

regression from some 16->32 bit listbox limit changing

Change-Id: I045eeef935afed4154fe11bfd11916c2d6a722e9